# Dive-Into-Modern-CPP

./: .gitignore  01_final_override.cpp  01_final_override.md  02_lambda.cpp  02_lambda.md  03_typedef_using.md  04_enum.cpp  04_enum.md  05_auto_decltype.cpp  05_auto_decltype.md  06_initializer_list.cpp  06_initializer_list.md  08_explicit.cpp  09_rule_of_five.cpp  09_rule_of_five.md  11_inline.cpp  11_inline.md  12_nullptr.cpp  12_nullptr.md  13_variadic_template.cpp  13_variadic_template.md  14_default_initializer.cpp  14_default_initializer.md  15_rvo.cpp  15_rvo.md  CMakeLists.txt  README.md  dp1_raii.cpp  dp1_scopeguard.cpp  dp2_crtp.cpp  dp2_crtp_virtual_clone.cpp  dp2_crtp_virtual_clone.md  hanoi.cpp  mm1_memory_layout.cpp  mm2_object_layout_ebco.cpp  mm3_virtual_function_layout.cpp  my_string.cpp  sl5_any.cpp  sl5_any.md  sl7_my_string.cpp  (+3 more)
Pimpl/: abi.h  dp3_Pimpl_idiom.cpp  dp3_Pimpl_idiom.md
Pimpl/v1/: dp3_Pimpl_idiom.cpp  dp3_main.cpp
Pimpl/v2/: abi.h  dp3_Pimpl_idiom.cpp
observer/: README.md
observer/observer1/: FileDownloader1.cpp  MainForm1.cpp  README.md  main.cpp
observer/observer2/: FileDownloader2.cpp  Form.cpp  MainForm2.cpp  main.cpp
observer/observer3/: FileDownloader3.cpp  MainForm3.cpp  main.cpp
observer/observer4/: FileDownloader4.cpp  MainForm4.cpp  main.cpp
observer/observer5/: FileDownload5.cpp  FileDownloader5.cpp
observer/observer6/: FileDownloader6.cpp
smart_pointer/: mm4_smart_pointer.md  mm4_smart_pointer_shared.cpp  mm4_smart_pointer_unique.cpp  mm4_struct.h  nest_smart_pointer.cpp
strategy/: dp5_policy_1.cpp  dp5_policy_2.cpp  dp5_strategy_1.cpp  dp5_strategy_2.cpp
template_method/: dp4_crtp_template_method.cpp  dp4_template_method.md  dp4_template_method_1.cpp  dp4_template_method_2.cpp
